# market-making-sim

./: LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
mmsim/: __init__.py  __main__.py  cli.py  dynamics.py  metrics.py  simulate.py  strategies.py
tests/: test_dynamics.py  test_metrics.py  test_simulation.py  test_strategies.py
